integrates/back/deploy/prod/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integrates-${NAME}
  namespace: production
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: management:area=cost,management:product=integrates,management:type=product
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120
    alb.ingress.kubernetes.io/security-groups: CloudFlare
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '6'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
spec:
  rules:
    - host: ${ENDPOINT}.fluidattacks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: integrates-${NAME}
                port:
                  number: 81
